--- a/package.json
+++ b/package.json
@@ -9,12 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.0.2",
+    "mongodb": "^3.6.6",
+    "mongoose": "^5.12.9",
     "next": "11.0.1",
+    "next-auth": "^3.27.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.32.13"
   },
   "devDependencies": {
-    "eslint": "7.32.0",
+    "@types/mongodb": "^3.6.12",
+    "@types/mongoose": "^5.10.5",
+    "@types/react": "^17.0.5",
+    "eslint": "7.31.0",
     "eslint-config-next": "11.0.1"
   }
 }
